--- a/package.json
+++ b/package.json
@@ -1,31 +1,64 @@
 {
-  "name": "skydropx-challenge",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "axios": "^0.26.1",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.40",
-    "autoprefixer": "^10.4.3",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "postcss": "^8.4.11",
-    "tailwindcss": "^3.0.23",
-    "typescript": "4.6.2"
-  }
+    "name": "skydropx-challenge",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "test": "jest",
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@types/enzyme-to-json": "^1.5.4",
+        "axios": "^0.26.1",
+        "enzyme-to-json": "^3.6.2",
+        "next": "12.1.0",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-redux": "^7.2.6",
+        "redux": "^4.1.2",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-thunk": "^2.4.1"
+    },
+    "devDependencies": {
+        "@types/enzyme": "^3.10.11",
+        "@types/jest": "^27.4.1",
+        "@types/node": "17.0.21",
+        "@types/react": "17.0.40",
+        "@types/react-dom": "^17.0.14",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+        "autoprefixer": "^10.4.3",
+        "enzyme": "^3.11.0",
+        "eslint": "8.11.0",
+        "eslint-config-next": "12.1.0",
+        "jest": "^27.5.1",
+        "postcss": "^8.4.11",
+        "tailwindcss": "^3.0.23",
+        "ts-jest": "^27.1.3",
+        "typescript": "4.6.2"
+    },
+    "jest": {
+        "moduleNameMapper": {
+            "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+        },
+        "transform": {
+            "^.+\\.(ts|tsx)$": "ts-jest"
+        },
+        "testMatch": [
+            "**/tests/*.(ts|tsx)"
+        ],
+        "setupFilesAfterEnv": [
+            "<rootDir>/jest.setup.ts"
+        ],
+        "testPathIgnorePatterns": [
+            "./.next/",
+            "./node_modules/"
+        ],
+        "globals": {
+            "ts-jest": {
+                "tsconfig": "tsconfig.jest.json"
+            }
+        }
+    }
 }
