--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "scripts": {
         "test": "jest",
+        "run-test": "jest --watchAll",
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
@@ -11,6 +12,7 @@
     },
     "dependencies": {
         "@types/enzyme-to-json": "^1.5.4",
+        "@types/redux-mock-store": "^1.0.3",
         "axios": "^0.26.1",
         "enzyme-to-json": "^3.6.2",
         "next": "12.1.0",
@@ -19,6 +21,7 @@
         "react-redux": "^7.2.6",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
+        "redux-mock-store": "^1.5.4",
         "redux-thunk": "^2.4.1"
     },
     "devDependencies": {
@@ -59,6 +62,11 @@
             "ts-jest": {
                 "tsconfig": "tsconfig.jest.json"
             }
-        }
+        },
+        "moduleDirectories": [
+            "node_modules",
+            "./"
+        ],
+        "testEnvironment": "jsdom"
     }
 }
