--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -1,7 +1,7 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "jsx": "react"
+        "jsx": "react-jsx"
     },
     "snapshotSerializers": ["enzyme-to-json/serializer"]
 }
